--- a/milesstone5/resume-bulder-main/index3.html
+++ b/milesstone5/resume-bulder-main/index3.html
@@ -367,7 +367,7 @@ button{
                         <span class="text" id="resume-linkedin"></span>
                     </li>   
                      <li>
-                        <span class="icon"><i class="fa fa-linkedin" aria-hidden="true"></i></span>
+                        <span class="icon"><i class="fa fa-facebook" aria-hidden="true"></i></span>
                         <span class="text" id="resume-facebook"></span>
                     </li>
                     <li>
